Fix horizontal scrolling

--- a/public/style.css
+++ b/public/style.css
@@ -27,7 +27,6 @@ body {
   display: flex;
   place-items: center;
   min-height: 100vh;
-  min-width: 100vw;
 }
 
 h1 {
